# rocket_hover_land_sim

./: .gitignore  METHODS.md  MPC_DESIGN.md  README.md  TEACHING_GUIDE.md  pyproject.toml
src/rocket_landing/: __init__.py  controller.py  mass_properties.py  mpc.py  sim.py
src/rocket_landing/assets/: rocket.xml
tests/: test_controller.py  test_hover.py  test_landing.py  test_mass_properties.py  test_mass_update.py  test_model.py  test_mpc.py
