[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mujoco-rocket-landing"
version = "0.7.0"
description = "Interactive 3-D MuJoCo rocket with powered-descent thrust constraints."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "glfw>=2.8",
  "mujoco>=3.3,<4",
  "numpy>=1.26",
]

[project.scripts]
rocket-landing = "rocket_landing.sim:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/rocket_landing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
