[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mujoco-rocket-landing"
version = "0.10.3"
description = "Interactive 6-DOF MuJoCo rocket with successive-convexification MPC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cvxpy>=1.7,<2",
  "glfw>=2.8",
  "mujoco>=3.3,<4",
  "numpy>=1.26",
]

[project.scripts]
rocket-landing = "rocket_landing.sim:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/rocket_landing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
